<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkBackgroud"
    android:orientation="vertical"
    tools:context=".views.activities.CadastroActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:background="@drawable/background_login"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_nome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/nome"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/pink"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:maxLength="20"
                    android:layout_marginTop="40dp"
                    android:theme="@style/EditTextDefault"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/pink"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:theme="@style/EditTextDefault"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_senha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColor="@color/pink"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:theme="@style/EditTextDefault"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_repetir_senha"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/repetir_senha"
                    android:inputType="textPassword"
                    android:textColor="@color/pink"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:theme="@style/EditTextDefault"/>

                <Button
                    android:id="@+id/btn_cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_buttom_default"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:text="@string/cadastrar"
                    android:textAlignment="center"
                    android:theme="@style/ButtonDefault" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>