<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkBackgroud"
    tools:context=".views.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:background="@drawable/background_login"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleTextDefault"/>

            <EditText
                android:layout_marginTop="60dp"
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/pink"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:theme="@style/EditTextDefault"/>

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edit_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/pink"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:theme="@style/EditTextDefault"
                />

            <Button
                android:id="@+id/btn_acessar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_buttom_default"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="15dp"
                android:text="@string/acessar"
                android:textAlignment="center"
                android:theme="@style/ButtonDefault" />

            <TextView
                android:id="@+id/txt_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/casdastre_se"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                style="@style/TextDefault"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>