<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkBackgroud"
    android:orientation="vertical"
    tools:context=".views.activities.MantemComentarioActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:background="@drawable/background_login"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_comentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/comentario"
                    android:gravity="top|left"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/pink"
                    android:maxLength="280"
                    android:layout_marginTop="40dp"
                    android:padding="10dp"
                    android:minLines="5"
                    android:theme="@style/EditTextDefault"/>

                <Button
                    android:id="@+id/btn_criar_comentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_buttom_default"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:text="@string/salvar"
                    android:textAlignment="center"
                    android:visibility="visible"
                    android:theme="@style/ButtonDefault" />

                <LinearLayout
                    android:id="@+id/ll_botoes_alterar_deletar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_alterar_comentario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_buttom_alterar"
                        android:onClick="alterar"
                        android:padding="15dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/alterar"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:theme="@style/ButtonDefault"
                        tools:ignore="OnClick" />

                    <Button
                        android:id="@+id/btn_deletar_comentario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_buttom_deletar"
                        android:padding="15dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/deletar"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:theme="@style/ButtonDefault" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>